.helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api
spec:
  selector:
    app: simple-api
  ports:
  - name: http
    port: 8080
