.helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: simple-api
spec:
  rules:
  - host: simple-api.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-api
            port:
              number: 8080
